# gps

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
gps/: combiner.py  denoiser.py  fdr.py  peakgroups.py  peptides.py  precursors.py  preprocess.py  proteins.py  scaler.py  scorer.py
gps/cli/: build.py  combine.py  createlib.py  denoise.py  export.py  gps  predict.py  score.py  train.py
gps/models/: base_model.py  deep_chromatogram_classifier.py
gps/parsers/: osw.py  pqp_file.py  queries.py  score_file.py  sqmass.py
gscore/: chromatogram_data_generator.py  chromatogram_model.py  chromatograms.py  combiner.py  datastructures.py  denoiser.py  distributions.py  export.py  exportdata.py  fdr.py  peakgroups.py  peptides.py  precursors.py  preprocess.py  proteins.py  scaler.py  scorer.py
gscore/cli/: build.py  build_global_model_args.py  build_scoring_model_args.py  combine.py  common.py  createlib.py  denoise.py  export.py  export_args.py  gscore  predict.py  score.py  score_run_args.py  train.py
notebooks/: Untitled.ipynb  Untitled1.ipynb  build_distribution.ipynb  chromatogram_embedder.ipynb  chromatograms.ipynb  deep_chrom_feature_model.ipynb  distributions.ipynb  estimate_protein_counts.ipynb  global_model_building.ipynb  multiproc.ipynb  openms_test.ipynb  parsing.ipynb  score_osw.ipynb  test.model  torch_model.ipynb  training_static_model-Copy1.ipynb  training_static_model-Copy2.ipynb  training_static_model.ipynb  var_distributions.ipynb
snakemake/: score_runs.smk  score_runs.yml  train_model.smk  train_model.yml
(+42 files in other folders)
