[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gps-ms"
version = "0.0.1"
authors = [
  { name="Aaron Scott", email="aaron.scott@med.lu.se" },
]
description = "A self-denoising and machine-learning based statistical generalized peakgroup scoring algorithm for SWATH-MS data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/InfectionMedicineProteomics/gps"
"Bug Tracker" = "https://github.com/InfectionMedicineProteomics/gps/issues"